# AI-detector

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
infra/: README.md  docker-compose.yml
infra/cdn/: README.md  cloudflare-images.toml
openapi/: README.md  detector-hive.yaml  detector-readef.yaml  detector-sensity.yaml  orchestrator.yaml  provenance.yaml  watermark-synthid.yaml
postman/: README.md  ai-detector.postman_collection.json
sdks/python/: README.md  pyproject.toml
sdks/python/ai_detector_sdk/: __init__.py  client.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
services/detector-hive/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
services/detector-hive/src/: config.ts  hiveClient.ts  main.ts  service.ts  types.ts
services/detector-hive/tests/: main.test.ts
services/detector-readef/: .env.example  Dockerfile  pyproject.toml
services/detector-readef/app/: circuit.py  config.py  main.py  models.py  service.py
services/detector-readef/tests/: test_service.py
services/detector-sensity/: .env.example  Dockerfile  pyproject.toml
services/detector-sensity/app/: config.py  main.py  models.py  service.py
services/detector-sensity/tests/: test_service.py
services/orchestrator/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
services/orchestrator/src/: app.module.ts  config.ts  main.ts  policy.ts  tokens.ts  types.ts
services/orchestrator/src/clients/: detectors.client.ts  provenance.client.ts  synthid.client.ts
services/orchestrator/src/controllers/: inspect.controller.ts  report.controller.ts
services/orchestrator/src/dto/: inspect-request.dto.ts  inspect-response.dto.ts  report-response.dto.ts
services/orchestrator/src/repository/: audit.repository.ts  memory.repository.ts  postgres.repository.ts
services/orchestrator/tests/: orchestrator.test.ts  policy.test.ts
services/provenance-rs/: .env.example  Cargo.toml  Dockerfile
services/provenance-rs/src/: lib.rs  main.rs
services/provenance-rs/tests/: verification.rs
services/provenance-rs/tests/fixtures/: invalid_signature_base64.txt  stripped_base64.txt  valid_base64.txt
services/video-pipeline/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
services/video-pipeline/src/: config.ts  jobRunner.ts  main.ts  sampler.ts
services/video-pipeline/tests/: jobRunner.test.ts
services/watermark-synthid/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
services/watermark-synthid/src/: detector.ts  schema.ts  server.ts  synthidClient.ts
services/watermark-synthid/tests/: detector.test.ts
src/: detector.ts  schema.ts  server.ts
tests/: synthidClient.test.ts
tests/fixtures/: synthid-audio.json  synthid-audio.normalized.json  synthid-image.json  synthid-image.normalized.json  synthid-video.json  synthid-video.normalized.json
tests/preservation/: test_cdn_preservation.py
(+4 files in other folders)
