[tool.poetry]
name = "detector-sensity"
version = "0.1.0"
description = "Sensity detector microservice"
authors = ["AI" ]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
httpx = "^0.27.0"
pydantic = "^2.6.3"
cachetools = "^5.3.2"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
respx = "^0.20.2"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
