[package]
name = "provenance-rs"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "Provenance verification service"
license = "Apache-2.0"

[lib]
name = "provenance_rs"
path = "src/lib.rs"

[[bin]]
name = "provenance-rs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
infer = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
c2pa = { version = "0.67.1", default-features = false, features = ["rust_native_crypto"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "0.2"

[dev-dependencies]
prost = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
axum = { version = "0.7", features = ["multipart"] }
serde_json = "1"
base64 = "0.21"
